feat: add celebration modal window

--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "repository": "https://github.com/golden-gates-sf/photography-services-site.git",
   "author": "golden-gates-sf <redchenko.milana@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "start": "parcel src/index.html"
+  },
   "devDependencies": {
     "@parcel/transformer-sass": "2.11.0",
     "parcel": "^2.11.0"
