--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
   "license": "MIT",
   "scripts": {
     "start": "parcel src/index.html",
-    "build_docs": "parcel build src/index.html --dist-dir docs --public-url ./ --no-optimize"
+    "build_docs": "parcel build src/index.html --dist-dir docs --public-url ./ --no-optimize",
+    "prebuild": "shx rm -rf dist/*",
+    "build": "parcel build src/index.html --public-url ./",
+    "push-gh-pages": "push-dir --dir=dist --branch=gh-pages --cleanup --verbose"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "2.11.0",
-    "parcel": "^2.11.0"
+    "parcel": "^2.11.0",
+    "shx": "^0.3.2"
   }
 }
